--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
-
+spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
 #Test Port
-server.port=8000
+server.port=9000
